--- a/asmTest/字节码指令集.md
+++ b/asmTest/字节码指令集.md
@@ -67,7 +67,7 @@
 
 ## 控制转移指令
 让JVM有条件或无条件从指定指令而不是控制转移指令的下一条指令继续执行程序。控制转移指令包括：
-   1)条件分支:ifeq,iflt,ifle,ifne,ifgt,ifge,ifnull,ifnotnull,if_cmpeq,if_icmpne,if_icmlt,if_icmpgt等
+   1)条件分支:ifeq(=0),iflt(<0),ifle(<=0),ifne(!=0),ifgt(>0),ifge(>=0),ifnull,ifnotnull,if_cmpeq,if_icmpne,if_icmlt,if_icmpgt等
    2)复合条件分支:tableswitch,lookupswitch
    3)无条件分支:goto,goto_w,jsr,jsr_w,ret
 JVM中有专门的指令集处理int和reference类型的条件分支比较操作，为了可以无明显标示一个实体值是否是null,有专门的指令检测null 值。
