testwork resource example

--- a/testwork/src/main/res/values/strings.xml
+++ b/testwork/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="change_text">Change text</string>
     <string name="type_something">type something…</string>
     <string name="open_activity_and_change_text">Open activity and change text</string>
+    <string name="waiting_msg">Waiting for message…</string>
 </resources>
