--- a/testwork/src/main/res/values/strings.xml
+++ b/testwork/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="open_activity_and_change_text">Open activity and change text</string>
     <string name="waiting_msg">Waiting for message…</string>
     <string name="button_open_camera">Take photo</string>
+    <string name="start_private_activity">Start Private Process Activity</string>
+    <string name="click_me">Click Me!</string>
+    <string name="button_clicked">Button clicked!</string>
+    <string name="list_selection">Selected: %1$s</string>
+    <string-array name="list_items">
+        <item>Espresso</item>
+        <item>Doppio</item>
+        <item>Macchiato</item>
+        <item>Cappuccino</item>
+        <item>Americano</item>
+        <item>Mocha</item>
+        <item>Latte</item>
+    </string-array>
 </resources>
